Fixing the responsiveness on mobile view

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -39,9 +39,9 @@ body {
     padding: 3.75rem 5rem 1.875rem 3.125rem;
 }
 
-h2 {
+.heading {
     margin-bottom: 2rem;
-    font-size: 1.890rem;
+    font-size: 1.990rem;
     font-family: 'Inter', sans-serif;
 }
 
@@ -82,27 +82,24 @@ h2 {
     color: #7f7d92;
     text-transform: uppercase;
 }
-  
-.item1::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(128, 0, 128, 0.526);
-    z-index: 10;
+
+.item1{
+    background-color: #ad5dda;
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
 }
-  
-.img {
-    max-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
+
+img.img {
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    mix-blend-mode: multiply;
+    opacity: 0.8;
 }
 
 footer {
@@ -126,7 +123,7 @@ a {
         background-color: #1c1938;
         max-width: 35rem;
         height: auto;
-        margin: 0.938rem;
+        margin: 1.5rem;
         border-radius: 12px;
         display: grid; 
         grid-template-columns: 1fr; 
@@ -142,16 +139,8 @@ a {
         grid-area: item1-m; 
         position: relative;
     }
-    .item1-m::before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(128, 0, 128, 0.526);
-        z-index: 1;
+    .item1-m {
+        background-color: #ad5dda;
         border-top-right-radius: 12px;
         border-top-left-radius: 12px;
     }
@@ -163,33 +152,33 @@ a {
         align-self: center; 
         grid-area: item-m; 
     }
+    .heading-m {
+        font-family: 'Inter', sans-serif;
+        font-size: 2.1rem;
+        padding-top: 1.8rem;
+        padding-bottom: 1.1rem;
+    }
     .img-m {
-        max-width: 100%;
-        min-height: 100%;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
+        mix-blend-mode: multiply;
+        opacity: 0.8;
         border-top-left-radius: 12px;
         border-top-right-radius: 12px;
     }
-    h2 {
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        font-size: 1.840rem;
-        font-family: 'Inter', sans-serif;
-    }
-    .insights-m {
-        color: #ad5dda;
-    }
     .paragraph-m {
-        font-size: 0.890rem;
+        font-size: 1.1rem;
         color: #7f7d92;
-        margin-bottom: 2rem;
+        margin-bottom: 2.5rem;
     }
     .number-m {
         font-size: 1.840rem;
         font-family: 'Inter', sans-serif;
-        font-weight: 700;
+        font-weight: 600;
         text-align: center;
         margin-bottom: 1.8rem;
+        line-height: 0.8;
     }
     .name-m {
         font-size: 0.800rem;
